--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "grpc-interceptor",
   "version": "0.0.1",
   "scripts": {
-    "lint": "eslint .",
-    "depcheck": "depcheck"
+    "test": "jest",
+    "lint": "eslint . --fix",
+    "depcheck": "depcheck --ignores=eslint-config-plugin:*"
   },
   "private": true,
   "dependencies": {
@@ -13,6 +14,9 @@
   },
   "devDependencies": {
     "depcheck": "^0.6.9",
-    "eslint": "^4.14.0"
+    "eslint": "^4.14.0",
+    "eslint-plugin-jest": "^21.15.1",
+    "jest": "^22.4.3",
+    "protobufjs": "^6.8.6"
   }
 }
