--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "private": true,
   "dependencies": {
     "grpc": "^1.11.1",
+    "koa-compose": "^4.0.0",
     "zipkin": "^0.12.0",
     "zipkin-transport-http": "^0.12.0"
   },
