--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@echo-health/grpc-interceptors",
-  "version": "0.0.1",
+  "version": "0.0.6",
   "scripts": {
     "test": "jest",
     "lint": "eslint . --fix",
@@ -18,5 +18,20 @@
     "eslint-plugin-jest": "^21.15.1",
     "jest": "^22.4.3",
     "protobufjs": "^6.8.6"
-  }
+  },
+  "main": "index.js",
+  "directories": {
+    "test": "test"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/echo-health/node-grpc-interceptors.git"
+  },
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/echo-health/node-grpc-interceptors/issues"
+  },
+  "homepage": "https://github.com/echo-health/node-grpc-interceptors#readme",
+  "description": ""
 }
