--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "eslint": "^4.14.0",
     "eslint-plugin-jest": "^21.15.1",
     "jest": "^22.4.3",
+    "nock": "^9.2.5",
     "protobufjs": "^6.8.6"
   },
   "main": "index.js",
