--- a/package.json
+++ b/package.json
@@ -10,7 +10,6 @@
     "testURL": "http://localhost"
   },
   "dependencies": {
-    "grpc": "^1.11.1",
     "zipkin": "^0.12.0",
     "zipkin-transport-http": "^0.12.0"
   },
@@ -21,6 +20,9 @@
     "jest": "^22.4.3",
     "nock": "^9.2.5",
     "protobufjs": "^6.8.6"
+  },
+  "peerDependencies": {
+    "grpc": "^1.17.0"
   },
   "main": "index.js",
   "directories": {
