--- a/package.json
+++ b/package.json
@@ -34,6 +34,7 @@
     "zipkin-transport-http": "^0.22.0"
   },
   "devDependencies": {
+    "@grpc/proto-loader": "^0.5.5",
     "@vivlabs/eslint-config-viv-standard": "^12.0.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.8.0",
@@ -53,7 +54,6 @@
     "lint-staged": "^10.4.0",
     "nock": "^13.0.4",
     "npm-run-all": "^4.1.5",
-    "prettier": "^2.1.2",
-    "protobufjs": "^6.10.1"
+    "prettier": "^2.1.2"
   }
 }
